--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,7 +1,54 @@
 @mixin flex-box($direction, $justify, $align, $gap) {
-    display: flex;
-    flex-direction: $direction;
-    justify-content: $justify;
-    align-items: $align;
-    gap: $gap;
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
+  gap: $gap;
+}
+
+@mixin absolutePosition($top, $bottom, $left) {
+  position: absolute;
+  top: $top;
+  bottom: $bottom;
+  left: $left;
+}
+
+@mixin dimensions($width, $height, $padding) {
+  width: $width;
+  height: $height;
+  padding: $padding;
+}
+
+@mixin image-container($width, $height, $borderRadius) {
+  width: $width;
+  height: $height;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: $borderRadius;
+  }
+}
+
+@mixin font-style($size, $weight) {
+  font-size: $size;
+  font-weight: $weight;
+}
+
+@mixin foreAndBackGroundColor($color, $bgColor) {
+  color: $color;
+  background-color: $bgColor;
+}
+
+@mixin overflow($maxHeight, $overflowY) {
+  max-height: $maxHeight;
+  overflow-y: $overflowY;
+}
+
+@mixin search-box {
+  @include foreAndBackGroundColor(brown, beige);
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border: 2px solid brown;
+  border-radius: 10px;
 }
