--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,40 +17,26 @@
   position: relative;
   background-color: bisque;
   header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
     @include mixins.flex-box(column, center, flex-start, 0);
-    color: brown;
-    font-weight: bold;
-    font-size: 2vw;
-    padding: 10px;
+    @include mixins.absolutePosition(0, auto, 0);
+    @include mixins.dimensions(100%, 50px, 10px);
+    @include mixins.foreAndBackGroundColor(brown, bisque);
+    @include mixins.font-style(2vw, bold);
   }
   .search-container {
-    position: absolute;
-    top: 50px;
-    left: 0;
-    width: 100%;
-    height: 30px;
-    padding: 10px;
+    @include mixins.absolutePosition(50px, auto, 0);
+    @include mixins.dimensions(100%, 30px, 10px);
     .search-box {
-      width: 100%;
-      height: 30px;
-      padding: 2px 10px;
-      border: 2px solid brown;
-      border-radius: 10px;
-      background-color: beige;
-      color: brown;
+      @include mixins.search-box;
+      @include mixins.dimensions(100%, 30px, 10px);
       &:focus {
         outline: none;
       }
     }
     .search-results {
       @include mixins.flex-box(column, flex-start, center, 0);
+      @include mixins.foreAndBackGroundColor(brown, beige);
       width: 100%;
-      background-color: beige;
       padding: 0 10px;
       border: 2px solid brown;
       border-bottom-left-radius: 10px;
@@ -60,39 +46,29 @@
         width: 100%;
         padding: 10px;
         border-bottom: 2px solid brown;
-        color: brown;
         &:last-child {
           border-bottom: none;
         }
         cursor: pointer;
         .img-container {
-          width: 30px;
-          height: 30px;
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 50px;
-          }
+          @include mixins.image-container(30px, 30px, 50px);
         }
       }
     }
   }
   .chats-container {
-    margin-top: 120px;
-    padding: 10px;
     @include mixins.flex-box(column, flex-start, center, 10px);
+    @include mixins.overflow(calc(100vh - 120px), auto);
+    margin-top: 120px;
     width: 100%;
-    max-height: calc(100vh - 120px);
-    overflow-y: auto;
+    padding: 10px;
     .chat-card {
       @include mixins.flex-box(row, flex-start, center, 10px);
+      @include mixins.foreAndBackGroundColor(brown, beige);
       width: 100%;
-      background-color: beige;
+      padding: 5px;
       border: 4px solid brown;
       border-radius: 10px;
-      padding: 5px;
-      color: brown;
       cursor: pointer;
       &.selected {
         background-color: brown;
@@ -102,14 +78,7 @@
         background-color: bisque;
       }
       .img-container {
-        width: 50px;
-        height: 50px;
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          border-radius: 50px;
-        }
+        @include mixins.image-container(50px, 50px, 50px);
       }
       .chat-name {
         flex-grow: 1;
@@ -118,8 +87,7 @@
       .chat-time {
         min-width: 80px;
         @include mixins.flex-box(column, center, flex-end, 0);
-        font-weight: bold;
-        font-size: 12px;
+        @include mixins.font-style(12px, bold);
       }
     }
   }
@@ -129,60 +97,46 @@
   position: relative;
   background-color: beige;
   header {
-    position: absolute;
-    top: 0;
-    left: 0;
     @include mixins.flex-box(row, flex-start, center, 10px);
-    width: 100%;
-    height: 50px;
-    background-color: bisque;
-    color: brown;
-    font-weight: bold;
+    @include mixins.absolutePosition(0, auto, 0);
+    @include mixins.dimensions(100%, 50px, 10px);
+    @include mixins.foreAndBackGroundColor(brown, bisque);
+    @include mixins.font-style(2vw, bold);
     font-size: 1.5vw;
-    padding: 10px 0;
     .img-container {
-      width: 40px;
-      height: 40px;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 50px;
-      }
+      @include mixins.image-container(40px, 40px, 50px);
     }
     .chat-name {
       flex-grow: 1;
     }
     .delete-chat-btn {
-      flex-grow: 1;
+      @include mixins.foreAndBackGroundColor(bisque, brown);
+      @include mixins.font-style(1.2vw, bold);
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
       text-align: right;
-      padding-right: 20px;
-      span {
-        cursor: pointer;
-      }
+      cursor: pointer;
     }
   }
   main {
-    margin-top: 50px;
-    max-height: calc(100vh - 100px);
-    overflow-y: auto;
+    @include mixins.overflow(calc(100vh - 100px), auto);
     @include mixins.flex-box(column, flex-start, flex-end, 20px);
+    margin-top: 50px;
     padding: 10px 20px 0;
     .message-card {
       @include mixins.flex-box(column, flex-start, flex-start, 10px);
-      background-color: brown;
-      color: beige;
+      @include mixins.foreAndBackGroundColor(beige, brown);
       padding: 10px;
       border-radius: 10px;
       .user-info {
         @include mixins.flex-box(row, space-between, center, 0);
+        @include mixins.font-style(16px, bold);
         width: 100%;
-        font-weight: bold;
         .message-time {
-          min-width: 80px;
           @include mixins.flex-box(column, flex-start, flex-end, 0);
-          font-weight: bold;
-          font-size: 12px;
+          @include mixins.font-style(12px, bold);
+          min-width: 80px;
         }
       }
       .message-content {
@@ -194,32 +148,22 @@
     }
   }
   footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    @include mixins.absolutePosition(auto, 0, 0);
+    @include mixins.dimensions(100%, 50px, 10px);
     @include mixins.flex-box(row, center, center, 0);
-    width: 100%;
-    height: 50px;
     background-color: bisque;
-    padding: 10px 0;
     input {
-      width: 90%;
-      height: 30px;
-      padding: 2px 10px;
-      border: 2px solid brown;
-      border-radius: 10px;
+      @include mixins.search-box;
+      @include mixins.dimensions(90%, 30px, 10px);
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
       border-right: none;
-      background-color: beige;
-      color: brown;
       &:focus {
         outline: none;
       }
     }
     button {
-      background-color: brown;
-      color: bisque;
+      @include mixins.foreAndBackGroundColor(bisque, brown);
       border: none;
       border-top-right-radius: 10px;
       border-bottom-right-radius: 10px;
@@ -231,12 +175,9 @@
 }
 
 .chat-info-fallback-container {
-  width: 100%;
-  height: 100vh;
-  padding: 20px;
   @include mixins.flex-box(column, center, center, 0);
-  font-size: 5vh;
-  font-weight: bold;
+  @include mixins.font-style(5vh, bold);
+  @include mixins.dimensions(100%, 100vh, 20px);
   color: brown;
   div {
     text-align: center;
