--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+@use "colors";
 @use "mixins";
 
 * {
@@ -15,12 +16,15 @@
 
 .chats-list-container {
   position: relative;
-  background-color: bisque;
+  background-color: colors.$bgColor1;
   header {
     @include mixins.flex-box(column, center, flex-start, 0);
     @include mixins.absolutePosition(0, auto, 0);
     @include mixins.dimensions(100%, 50px, 10px);
-    @include mixins.foreAndBackGroundColor(brown, bisque);
+    @include mixins.foreAndBackGroundColor(
+      colors.$textColor1,
+      colors.$bgColor1
+    );
     @include mixins.font-style(2vw, bold);
   }
   .search-container {
@@ -35,17 +39,20 @@
     }
     .search-results {
       @include mixins.flex-box(column, flex-start, center, 0);
-      @include mixins.foreAndBackGroundColor(brown, beige);
+      @include mixins.foreAndBackGroundColor(
+        colors.$textColor1,
+        colors.$bgColor2
+      );
       width: 100%;
       padding: 0 10px;
-      border: 2px solid brown;
+      border: 2px solid colors.$textColor1;
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
       .user-card-container {
         @include mixins.flex-box(row, flex-start, center, 10px);
         width: 100%;
         padding: 10px;
-        border-bottom: 2px solid brown;
+        border-bottom: 2px solid colors.$textColor1;
         &:last-child {
           border-bottom: none;
         }
@@ -64,18 +71,23 @@
     padding: 10px;
     .chat-card {
       @include mixins.flex-box(row, flex-start, center, 10px);
-      @include mixins.foreAndBackGroundColor(brown, beige);
+      @include mixins.foreAndBackGroundColor(
+        colors.$textColor1,
+        colors.$bgColor2
+      );
       width: 100%;
       padding: 5px;
-      border: 4px solid brown;
+      border: 4px solid colors.$textColor1;
       border-radius: 10px;
       cursor: pointer;
       &.selected {
-        background-color: brown;
-        color: beige;
+        @include mixins.foreAndBackGroundColor(
+          colors.$bgColor2,
+          colors.$textColor1
+        );
       }
       &:hover:not(.selected) {
-        background-color: bisque;
+        background-color: colors.$bgColor1;
       }
       .img-container {
         @include mixins.image-container(50px, 50px, 50px);
@@ -95,12 +107,15 @@
 
 .chat-info-container {
   position: relative;
-  background-color: beige;
+  background-color: colors.$bgColor2;
   header {
     @include mixins.flex-box(row, flex-start, center, 10px);
     @include mixins.absolutePosition(0, auto, 0);
     @include mixins.dimensions(100%, 50px, 10px);
-    @include mixins.foreAndBackGroundColor(brown, bisque);
+    @include mixins.foreAndBackGroundColor(
+      colors.$textColor1,
+      colors.$bgColor1
+    );
     @include mixins.font-style(2vw, bold);
     font-size: 1.5vw;
     .img-container {
@@ -110,7 +125,10 @@
       flex-grow: 1;
     }
     .delete-chat-btn {
-      @include mixins.foreAndBackGroundColor(bisque, brown);
+      @include mixins.foreAndBackGroundColor(
+        colors.$bgColor1,
+        colors.$textColor1
+      );
       @include mixins.font-style(1.2vw, bold);
       padding: 10px;
       border: none;
@@ -126,7 +144,10 @@
     padding: 10px 20px 0;
     .message-card {
       @include mixins.flex-box(column, flex-start, flex-start, 10px);
-      @include mixins.foreAndBackGroundColor(beige, brown);
+      @include mixins.foreAndBackGroundColor(
+        colors.$bgColor2,
+        colors.$textColor1
+      );
       padding: 10px;
       border-radius: 10px;
       .user-info {
@@ -151,7 +172,7 @@
     @include mixins.absolutePosition(auto, 0, 0);
     @include mixins.dimensions(100%, 50px, 10px);
     @include mixins.flex-box(row, center, center, 0);
-    background-color: bisque;
+    background-color: colors.$bgColor1;
     input {
       @include mixins.search-box;
       @include mixins.dimensions(90%, 30px, 10px);
@@ -163,7 +184,10 @@
       }
     }
     button {
-      @include mixins.foreAndBackGroundColor(bisque, brown);
+      @include mixins.foreAndBackGroundColor(
+        colors.$bgColor1,
+        colors.$textColor1
+      );
       border: none;
       border-top-right-radius: 10px;
       border-bottom-right-radius: 10px;
@@ -178,7 +202,7 @@
   @include mixins.flex-box(column, center, center, 0);
   @include mixins.font-style(5vh, bold);
   @include mixins.dimensions(100%, 100vh, 20px);
-  color: brown;
+  color: colors.$textColor1;
   div {
     text-align: center;
   }
